Table users {
  id varchar(255) [primary key] // clerk_id - permanent identifier from Clerk
  name varchar(100) not null
  email varchar(100) unique not null
  image_url text
  auth_provider varchar(20) // clerk, oauth, jwt
  created_at timestamp default now()
  updated_at timestamp default now()
  last_sign_in_at timestamp
  streak_data jsonb
}

Table interviews {
  id uuid [primary key]
  user_id varchar(255) [not null, ref: > users.id] // references clerk_id
  domain varchar(50) [not null] // DSA, Web Dev
  difficulty varchar(20) [not null] // easy, medium, hard
  duration int [not null] // in minutes
  started_at timestamp [not null, default: `now()`]
  ended_at timestamp // null if in-progress
  status varchar(20) [default: 'in_progress'] // in_progress, completed, abandoned
  total_score int // nullable until completed

  indexes {
    (user_id) [unique, name: 'interviews_one_active_per_user_idx', note: 'where status = in_progress']
  }
}

Table questions {
  id uuid [primary key]
  interview_id uuid [ref: > interviews.id]
  question_bank_id uuid [ref: > question_bank.id]
  position int [not null, default: 0]
  created_at timestamp default now()
}

Table answer_attempts {
  id uuid [primary key]
  question_id uuid [ref: > questions.id]
  user_id varchar(255) [ref: > users.id] // references clerk_id
  code text // optional for theoretical questions
  language varchar(50)
  explanation text [not null]
  hints_used int [not null, default: 0]
  ai_feedback text
  evaluation_result jsonb
  score int // 0-10 points, null until scored
  created_at timestamp default now()
}
Table question_bank {
  id uuid [primary key]
  slug varchar(255) [unique, not null] // topic-slug-problem-slug
  domain varchar(20) [not null] // DSA, Web Dev
  difficulty varchar(20) [not null] // easy, medium, hard
  difficulty_score int [not null] // 1-10
  title varchar(255) [not null]
  primary_topic varchar(100) [not null]
  secondary_topic varchar(100) // optional
  description text [not null]
  examples jsonb [not null] // array of example objects
  constraints jsonb [not null] // array of strings
  requires_code boolean [not null, default: true]
  starter_code jsonb [not null] // keyed by language
  optimal_solution jsonb [not null] // keyed by language
  solution_explanation text [not null]
  time_complexity text [not null]
  space_complexity text [not null]
  hints jsonb [not null] // array of strings
  follow_up_questions jsonb [not null] // array of strings
  interviewer_notes text [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (domain, difficulty_score) [name: 'domain_difficulty_idx']
  }
}

Table question_bank_tags {
  id uuid [primary key]
  question_bank_id uuid [ref: > question_bank.id]
  tag varchar(100) [not null]
}


Table recordings {
  id uuid [primary key]
  interview_id uuid [not null, ref: > interviews.id]
  video_url text
  transcript_url text
  recording_status varchar(20) [default: 'pending']
  created_at timestamp default now()
}
